// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`values() should fail 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should match regexp: /^test/",
      "path": "c",
    },
  ],
  "message": "Values should be valid",
  "path": "",
}
`;

exports[`values() should support custom message 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should match regexp: /^test/",
      "path": "b",
    },
  ],
  "message": "Custom message",
  "path": "",
}
`;
